fix: fix some font layout problems

--- a/singolo1.css
+++ b/singolo1.css
@@ -118,10 +118,17 @@ h2.section_services-h2 {
     font-family: "Lato Black";
     letter-spacing: -1.1px;
 }
-ul.services-ul {
+.main-section_services{
+    color: rgba(102, 109, 137, 1);
+    background-color: rgba(242, 242, 242, 1);
+    border-bottom: 6px solid rgba(255, 255, 255, 1);
+    height: 424px;
+}
+.services-ul {
     display: grid;
+    grid-gap: 1em;
     list-style-type: none;
-    margin-block-start: 0em;
+    margin-block-start: 2.5em;
     margin-block-end: 0em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
@@ -137,9 +144,22 @@ ul.services-ul {
     margin-left: 2px;
     font-family: "Lato Light";
 }
-li.services-ul_item {
-    margin-right: 3px;
-    display: flex;
-    font-size: 0.7em;
-    line-height: 2.2em;
+.services-ul_item {
+    display: grid;
+    grid-template-columns: 1fr 2.9fr;
+    grid-gap: 7px;
+    line-height: 1.9em;
+    font-size: 12px;
+    align-items: start;
+    font-family: "Lato Regular";
+    margin-bottom: 8px;
+}
+.services-ul_item-h3 {
+    font-size: 18px;
+    font-family: "Lato Black";
+    margin-block-start: 4px;
+    margin-block-end: 7px;
+}
+.services-ul_item_img {
+    margin: 7px 0px;
 }
